# wirow-server

./: .breakpoints  .editorconfig  .gdbinit  .gitignore  .gitmodules  .ignore  .lvimrc  BUILDING.md  CMakeLists.txt  Changelog  INFO.md  LICENSE  README.md  musl-linux-x86-64-tc.cmake  release.sh
cmake/Modules/: AddCURL.cmake  AddEJDB2.cmake  AddExcalidraw.cmake  AddFFmpeg.cmake  AddLibDeflate.cmake  AddLibOpus.cmake  AddLibVpx.cmake  AddMediasoup.cmake  AddSentry.cmake  FindCUnit.cmake
cmake/Modules/AddExcalidraw/: build.sh
cmake/Modules/AddFFmpeg/: patch.sh
cmake/Modules/AddLibVpx/: patch.sh
cmake/Modules/AddMediasoup/: meson-musl.ini.in
cmake/Modules/AddSentry/: libcurl_blob.patch  lss.patch  minidump.patch  patch.sh
config/: development.ini  development2.ini  example-configuration.ini  gen_server_keys.sh  server-ecdsacert.pem  server-eckey.pem  ssl-cert-snakeoil.key  stage.ini  stage_local.ini  testing.ini
docker/: Dockerfile  README.md  wirow.ini
docs/: README.md  development.adoc  generate.sh  model.txt  wirow-configuration.ini  wirow.adoc
docs/artwork/Logo/: hints.txt
docs/themes/: my-theme.yml
front/: .eslintrc  .gitignore  check.sh  media.txt  package.json  rollup.config.js  rollup.config.mjs  tsconfig.json
front-whiteboard/: .gitignore  package.json  tsconfig.json
front-whiteboard/public/: index.html
front-whiteboard/scripts/: build.js
front-whiteboard/src/: CollabWrapper.css  CollabWrapper.tsx  collab.ts  db.ts  index.css  index.tsx  utils.ts  wsloop.ts
front/css/: _activitybar.scss  _chat.scss  _compatibility.scss  _media.scss  _meeting.scss  _members.scss  _sidebar.scss  _welcome.scss  admin.scss  fonts.css  global.scss
front/css/admin/: _admin.scss  _dashboard.scss  _menu.scss  _users.scss
front/css/kit/: _box.scss  _buttons.scss  _checkbox.scss  _common.scss  _dropdown.scss  _form.scss  _input.scss  _loader.scss  _mixins.scss  _modal.scss  _notifications.scss  _pager.scss  _popup.scss  _radio.scss  _scrollbar.scss  _select.scss  _split_pane.scss  _switch.scss  _table.scss  _tooltip.scss  _variables.scss
front/src/: AppRoot.svelte  ConfirmDialog.svelte  audio.ts  checks.ts  config.ts  constants.ts  db.ts  env.ts  events.ts  fetch.ts  index.ts  interfaces.d.ts  logger.ts  media.ts  mediastream.ts  notify.ts  permissions.ts  room.ts  sentry.internal.ts  sentry.ts  translate.ts  user.ts  utils.ts  validate.ts  validators.ts  ws.ts
front/src/admin/: Admin.svelte  Menu.svelte  admin.ts  constant.ts  index.ts  menu.ts  translations.ts
front/src/admin/dashboard/: Dashboard.svelte
front/src/admin/users/: UserEditDialog.svelte  UserRemoveDialog.svelte  Users.svelte
front/src/kit/: Box.svelte  Button.svelte  Chart.svelte  Checkbox.svelte  Dropdown.svelte  FatalModal.svelte  HSplitPane.svelte  Icon.svelte  Input.svelte  Loader.svelte  Modal.svelte  Notifications.svelte  Palette.svelte  Popup.svelte  PopupLi.svelte  Radio.svelte  Select.svelte  SingletonHolder.svelte  Switch.svelte  Tooltip.svelte  button.ts  dropdown.ts
front/src/kit/icons/: angleDown.ts  at.ts  bars.ts  chalkboard.ts  (+37 more)
front/src/public/: AppCaption.svelte  LoginDialog.svelte  Public.svelte  index.ts
front/src/router/: Router.svelte  index.ts
front/src/sentry/: sentry.disabled.ts  sentry.enabled.ts  sentry.ts
front/src/ui/: ActivityBar.svelte  ActivityBarLib.ts  ActivityButton.svelte  Compatibility.svelte  FatalModal.svelte  SideBar.svelte  Welcome.svelte  WelcomeActions.svelte  WelcomeHeader.svelte  WelcomeHistory.svelte  WelcomeHistoryItem.svelte
installer/: CMakeLists.txt
src/: CMakeLists.txt  exec_ffmpeg.c  exec_worker.c  gr.c  gr.h  gr_crypt.c  gr_crypt.h  gr_db_init.c  gr_db_init.h  gr_gauges.c  gr_gauges.h  gr_sentry.c  gr_sentry.h  gr_task_worker.c  gr_task_worker.h  gr_watcher.c  gr_watcher.h  grh.h  grh_auth.c  grh_auth.h  grh_monsters.c  grh_monsters.h  grh_monsters_data.h  grh_room.c  grh_room.h  grh_routes.c  grh_routes.h  grh_session.c  grh_session.h  grh_uploads.c  grh_uploads.h  grh_users.c  grh_users.h  grh_ws.c  grh_ws.h  grh_ws_user.c  grh_ws_user.h  iwnet_extra.c  iwnet_extra.h
src/acme/: acme.c  acme.h
src/adm/: grh_adm.c  grh_adm.h  grh_adm_users.c  grh_adm_users.h
src/lic/: CMakeLists.txt  lic.c  lic.h  lic.js  lic_complete.js  lic_env.h.in
src/rct/: rct.c  rct.h  rct_consumer.c  rct_consumer.h  rct_consumer_data.c  rct_h264.c  rct_h264.h  rct_modules.h  rct_observer.c  rct_observer.h  rct_observer_al.c  rct_observer_al.h  rct_observer_as.c  rct_observer_as.h  rct_producer.c  rct_producer.h  rct_producer_data.c  rct_producer_direct.c  rct_producer_export.c  rct_producer_export.h  rct_room.c  rct_room.h  rct_room_internal.h  rct_room_recording.c  rct_room_recording.h  rct_router.c  rct_router.h  rct_transport.c  rct_transport.h  rct_transport_direct.c  rct_transport_plain.c  rct_transport_webrtc.c  rct_utils.c  rct_utils.h  rct_worker.c  rct_worker.h
src/rct/tests/: CMakeLists.txt  probe.c  rct_test1.c  rct_test2.ini  rct_test_consumer.c  rct_test_consumer.h  rct_test_consumer.ini  rct_test_consumer_data.c  rct_test_transport_direct.c  rct_test_transport_pipe.c  rct_test_transport_plain.c  rct_test_transport_webrtc.c  rct_test_transport_webrtc.h  rct_tests.h  ssl-cert-snakeoil.pem
src/rec/: grh_recording.c  grh_recording.h  info.txt  recording_postproc.c  recording_postproc.h  recording_resources.h
src/rec/tests/: CMakeLists.txt  rec_test_postproc1.c  rec_test_postproc1.ini
src/res/: grh_resources.c  grh_resources.h  grh_resources_adm.c  grh_resources_adm.h  grh_resources_impl.h  grh_resources_pub.c  grh_resources_pub.h
src/upd/: upd.c  upd.h
src/utils/: defer.h  files.h  html.c  html.h  ini.c  ini.h  netstring.c  netstring.h  network.c  network.h  trandom.h  urandom.c  urandom.h  utf8.h  xcurl.h
src/utils/tests/: CMakeLists.txt  t.html  test_html.c  test_network.c
src/wb/: wb.c  wb.h
src/wrc/: CMakeLists.txt  wrc.c  wrc.h  wrc_adapter.h
src/wrc/local/: wrc_adapter_local.c
src/wrc/old/: wrc_old.c
tools/: CMakeLists.txt  data_default_router_options.js  data_supported_rtp_capabilities.js  generate_text.sh
(+31 files in other folders)
